--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {
 <td style="width:850px; text-align:justify">
 <table border="0" cellpadding="20" cellspacing="10" id="intro" style="border-style: none;"> 
       <tr> 
- <td style="border-style: none;" ><img src="yadav-anshu.github.io/anshu.JPG" width="240" > 
+ <td style="border-style: none;" ><img src="anshu.JPG" width="240" > 
 	</td> 
         <td style="border-style: none;" valign="middle"> 
 		<div id="intro">
