--- a/pubs.html
+++ b/pubs.html
@@ -63,7 +63,7 @@ from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Sh
 </ul>
 <h3 style="color:#00BFFF;">Publications</h3>
 <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2021/1565.pdf">Practical, Round-Optimal Lattice-Based Blind Signatures</a>.<br> Shweta Agrawal, Elena Kirshanova, Damien Stehl&eacute, Anshu Yadav.<br><i>To appear in the proceedings of ACM-CCS 2022</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2021/1565.pdf">Practical, Round-Optimal Lattice-Based Blind Signatures</a>.<br> Shweta Agrawal, Elena Kirshanova, Damien Stehl&eacute, Anshu Yadav.<br><i>In the proceedings of ACM-CCS 2022</i>.</p>
 </li>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1024.pdf">Multi-Input Attribute Based Encryption and Predicate Encryption</a>.<br> Shweta Agrawal, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2022</i>.</p>
 </li>
