--- a/pubs.html
+++ b/pubs.html
@@ -55,22 +55,26 @@ body {
 <td style="width:100px">
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
+<!--
 <h3 style="color:#00BFFF;">Manuscripts</h3>
+-->
+<h3 style="color:#00BFFF;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Trace and Revoke with Optimal Parameters
-from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>IACR eprint</i>.</p>
+from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>To appear in the proceedings of Eurocrypt 2023</i>.</p>
 </li>
 </ul>
-<h3 style="color:#00BFFF;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2021/1565.pdf">Practical, Round-Optimal Lattice-Based Blind Signatures</a>.<br> Shweta Agrawal, Elena Kirshanova, Damien Stehl&eacute, Anshu Yadav.<br><i>In the proceedings of ACM-CCS 2022</i>.</p>
 </li>
+</ul>
+<ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1024.pdf">Multi-Input Attribute Based Encryption and Predicate Encryption</a>.<br> Shweta Agrawal, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2022</i>.</p>
 </li>
 </ul>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/634.pdf">Round-Optimal Lattice-Based Threshold Signatures, Revisited</a>.<br> Shweta Agrawal, Damien Stehl&eacute, Anshu Yadav. <br>
-<i>In the proceedings of EATCS International Colloquium on Automata, Languages and Programming (ICALP) 2022</i>.</p>
+<i>In the proceedings of EATCS-ICALP 2022</i>.</p>
 </li>
 </ul>
 </td>
