--- a/awards.html
+++ b/awards.html
@@ -56,6 +56,9 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <ul style="font-size:14px;">
+<li></li>
+Selected for Bro.C.Selvam Endowment Fund prize at IIT Madras based on the research performance.
+<br>
 <li>Google India Travel Grant for presenting paper at ACM CCS 2022.
 </li>
 <br>
