--- a/awards.html
+++ b/awards.html
@@ -57,7 +57,7 @@ body {
 <td valign="top"; style="width:850px; text-align:justify">
 <ul style="font-size:14px;">
 <li>
-Selected for <a href="https://joyofgiving.alumni.iitm.ac.in/endowments/other-award/br-c-selvam-endowment-fund-prize/#:~:text=The%20prize%20includes%20a%20silver,honor%20the%20memory%20of%20Bro.">Bro.C.Selvam Endowment Fund</a> prize at IIT Madras based on the research performance.
+Awarded <a href="https://joyofgiving.alumni.iitm.ac.in/endowments/other-award/br-c-selvam-endowment-fund-prize/#:~:text=The%20prize%20includes%20a%20silver,honor%20the%20memory%20of%20Bro.">Bro.C.Selvam Endowment Fund</a> prize at IIT Madras based on the research performance.
 </li>
 <br>
 <li>Google India Travel Grant for presenting paper at ACM CCS 2022.
