--- a/pubs.html
+++ b/pubs.html
@@ -60,6 +60,15 @@ body {
 -->
 <h3 style="color:#00BFFF;">Publications</h3>
 <ul>
+<li><p style="font-size:14px;"><a href="https://https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
+  <br> Shweta Agrawal, M&eacute lissa Rossi, Anshu Yadav, Shota Yamada.<br><i>To appear in the proceedings of Crypto 2023</i>.</p>
+</li>
+</ul>
+  <ul>
+<li><p style="font-size:14px;"><a href="https://https://yadav-anshu.github.io/pubs.html">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>To appear in the proceedings of Crypto 2023</i>.</p>
+</li>
+</ul>
+<ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Trace and Revoke with Optimal Parameters
 from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>To appear in the proceedings of Eurocrypt 2023</i>.</p>
 </li>
