--- a/pubs.html
+++ b/pubs.html
@@ -60,12 +60,12 @@ body {
 -->
 <h3 style="color:#00BFFF;">Publications</h3>
 <ul>
-<li><p style="font-size:14px;"><a href="https://https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
+<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
   <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i>To appear in the proceedings of Crypto 2023</i>.</p>
 </li>
 </ul>
   <ul>
-<li><p style="font-size:14px;"><a href="https://https://yadav-anshu.github.io/pubs.html">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>To appear in the proceedings of Crypto 2023</i>.</p>
+<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>To appear in the proceedings of Crypto 2023</i>.</p>
 </li>
 </ul>
 <ul>
