--- a/pubs.html
+++ b/pubs.html
@@ -70,7 +70,7 @@ body {
 </ul>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Trace and Revoke with Optimal Parameters
-from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>To appear in the proceedings of Eurocrypt 2023</i>.</p>
+from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Eurocrypt 2023</i>.</p>
 </li>
 </ul>
 <ul>
