--- a/activities.html
+++ b/activities.html
@@ -56,16 +56,17 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
-<tr><td> - Subreviewer for PKC 2021, Crypto 2022, 2023 and ACNS 2023.<br><br></td></tr><br>
+<tr><td> - Subreviewer for PKC 2021, Crypto 2022, 2023, ACNS 2023, IWSEC 2023, CCS 2023 and TCC 2023.<br><br></td></tr><br>
 <tr><td> - Student Volunteer at TCC-2018.<br><br></td></tr>
 <tr><td> - Teaching Assistant at IIT Madras for different courses:
 <ul>
-<li>Programming and Data Structures (Jul 2018 - Nov 2018)</li>
-<li>Languages, Machines and Computation (Jan 2019 - May 2019)</li>
-<li>Foundations of Cryptography (Jul 2019 - Nov 2019)</li>
-<li>Post-Quantum Cryptography(Feb 2021 - May 2021)</li>
-<li>Data Structures and Algorithms (Jan 2022 - Apr 2022)</li>
+<li>MOOC by <a https://nptel.ac.in/>NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
 <li>Quantum Algorithms and Cryptography (Jul 2022 - Nov 2022)</li>
+<li>Data Structures and Algorithms (Jan 2022 - Apr 2022)</li>
+<li>Post-Quantum Cryptography(Feb 2021 - May 2021)</li>
+<li>Foundations of Cryptography (Jul 2019 - Nov 2019)</li>
+<li>Languages, Machines and Computation (Jan 2019 - May 2019)</li>
+<li>Programming and Data Structures (Jul 2018 - Nov 2018)</li>
 </ul> 
 </td>
 </tr>
