--- a/education.html
+++ b/education.html
@@ -60,7 +60,7 @@ body {
 <td style="valign:top; padding-left:20px"> 2018 - current </td>
 <td style="padding-left:50px;">
 <p style="text-align:justify">
-<b>PhD pursuing</b> in <b>Computer Science and Engineering</b> from <a href="https://www.cse.iitm.ac.in"><b>IIT Madras</b></a>.<br>
+<b>PhD</b> in <b>Computer Science and Engineering</b> from <a href="https://www.cse.iitm.ac.in"><b>IIT Madras</b></a>.<br>
 <i>Advisor: <a href="https://www.cse.iitm.ac.in/~shwetaag"></i>Prof. Shweta Agrawal</a><br>
 <i>Area of Research:</i> Theoretical Cryptography</p>
 </p>
