--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
 <!--
 <hr style="width:100%;text-align:left;margin-left:0">
 //-->
-<p style="font-size:14px;">I am a PhD research scholar in <a href="https://www.cse.iitm.ac.in">Computer Science and Engineering Department</a> at <a href="https://www.iitm.ac.in">IIT Madras</a> working with <a href="https://www.cse.iitm.ac.in/~shwetaag"> Prof. Shweta Agrawal</a>. I am associated with the <a href="http://ccd.cse.iitm.ac.in/">Cryptography Cybersecurity and Distributed Trust (CCD) group</a> at IIT Madras. My research interests are in the area of Theoretical Cryptography. In particular, I am interested in studying the constructions of advanced crypto primitives under various assumptions. </p>
+<p style="font-size:14px;">I am currently a postdoctoral researcher at the <a href="https://ista.ac.at/en/home/">Institute of Science and Technology Austria</a>, working with Professor <a href="https://ist.ac.at/en/research/pietrzak-group/">Krzysztof Pietrzak</a>. I completed my Ph.D. from </a> at <a href="https://www.iitm.ac.in">IIT Madras</a> where I was fortunate to be guided by Professor <a href="https://www.cse.iitm.ac.in/~shwetaag"> Shweta Agrawal</a>. My research interests are in the area of Theoretical Cryptography. In particular, I am interested in studying the constructions of advanced crypto primitives under various assumptions. </p>
  <br> <br>
  Email: <tt> {first name DOT last name 06} AT gmail.com </tt> <br>
 <br>
