--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div id="head">
 <head>
 <title>Anshu Yadav</title>
-<h1 style="text-align:center; color:green; font-family:'Lucida Calligraphy'">Anshu Yadav</h1>
+<h1 style="text-align:center; color:green; font-family:'Verdana'">Anshu Yadav</h1>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
