--- a/activities.html
+++ b/activities.html
@@ -3,7 +3,7 @@
 <div id="head">
 <head>
 <title>Professional Activities</title>
-<h1 style="text-align:center; color:green; font-family:'Lucida Calligraphy'">Professional Activities</h1>
+<h1 style="text-align:center; color:green; font-family:'Arial'">Professional Activities</h1>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
