--- a/awards.html
+++ b/awards.html
@@ -3,7 +3,7 @@
 <div id="head">
 <head>
 <title>Awards</title>
-<h1 style="text-align:center; color:green; font-family:'Lucida Calligraphy'">Awards and Recognitions</h1>
+<h1 style="text-align:center; color:green; font-family:'Arial'">Awards and Recognitions</h1>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
