--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div id="head">
 <head>
 <title>Anshu Yadav</title>
-<h1 style="text-align:center; color:#333333; font-weight:400; font-family:'Cambria'">Anshu Yadav</h1>
+<h1 style="text-align:center; color:#444444; font-weight:400; font-family:'Cambria'">Anshu Yadav</h1>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -18,14 +18,14 @@ lib {
 }
 
 lib a {
-  color: magenta;
+  color: #888888;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 lib a:hover {
-  color: blue;
+  color: #222222;
 }
 
 body {
