--- a/pubs.html
+++ b/pubs.html
@@ -3,7 +3,7 @@
 <div id="head">
 <head>
 <title>Publications</title>
-<h1 style="text-align:center; color:green; font-family:'Arial'">Research</h1>
+<h1 style="text-align:center; color:#444466; font-weight:600; font-family:'Cambria'">Research</h1>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
