--- a/pubs.html
+++ b/pubs.html
@@ -18,14 +18,14 @@ lib {
 }
 
 lib a {
-  color: magenta;
+  color: #888888;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 lib a:hover {
-  color: blue;
+  color: #222222;
 }
 
 body {
