--- a/pubs.html
+++ b/pubs.html
@@ -58,7 +58,7 @@ body {
 <!--
 <h3 style="color:#00BFFF;">Manuscripts</h3>
 -->
-<h3 style="color:#00BFFF;">Publications</h3>
+<h3 style="color:#444466;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
   <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2023</i>.</p>
