--- a/education.html
+++ b/education.html
@@ -97,7 +97,7 @@ body {
 </tr>
 </table>
 <br>
-<h3 style="color:#00BFFF; font-family:'Courier New';">Courses Taken at IIT Madras</h3>
+<h3 style="color:#444466;">Courses Taken at IIT Madras</h3>
 <table style="font-size:14px">
 <tr>
 <td>
