--- a/pubs.html
+++ b/pubs.html
@@ -20,7 +20,7 @@ lib {
 lib a {
   color: #888888;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0;
   text-decoration: none;
 }
 
@@ -36,6 +36,7 @@ body {
 </div>
 <div id="menubar">
 
+&nbsp
 <ulb>
 <center>
 <lib><a href="index.html">Home</a></lib>
