--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ ulb {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: x353545;
+  background-color: #353545;
 }
 
 lib {
