--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ ulb {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #353545;
 }
 
 lib {
@@ -35,7 +34,7 @@ body {
 </style>
 </head>
 </div>
-<div id="menubar">
+<div id="menubar"; background: #353545;>
 <br>
 <br>
 <ulb>
