--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@ lib a:hover {
   color: #222222;
 }
 
+menu{
+background-color: #353545;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif; text-align:justify; top-margin:100px; left-margin:130px;
 }
 </style>
 </head>
 </div>
-<div id="menubar"; background: #353545;>
+<div id="menubar";>
 <br>
 <br>
 <ulb>
