--- a/education.html
+++ b/education.html
@@ -58,7 +58,7 @@ body {
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
 <tr>
-<td style="valign:top; padding-left:20px"> 2018 - current </td>
+<td style="valign:top; padding-left:20px"> 2018 - 2023 </td>
 <td style="padding-left:50px;">
 <p style="text-align:justify">
 <b>PhD</b> in <b>Computer Science and Engineering</b> from <a href="https://www.cse.iitm.ac.in"><b>IIT Madras</b></a>.<br>
