--- a/activities.html
+++ b/activities.html
@@ -57,7 +57,7 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
-<tr><td> - Subreviewer for PKC 2021, Crypto 2022, 2023, ACNS 2023, IWSEC 2023, CCS 2023 and TCC 2023.<br><br></td></tr><br>
+<tr><td> - Subreviewer for Eurocrypt 2024, Crypto 2022, 2023, CCS 2023, TCC 2023, PKC 2021, 2024, ACNS 2023, 2024 and IWSEC 2023.<br><br></td></tr><br>
 <tr><td> - Student Volunteer at TCC 2018.<br><br></td></tr>
 <tr><td> - Teaching Assistant at IIT Madras for different courses:
 <ul>
