--- a/activities.html
+++ b/activities.html
@@ -63,7 +63,7 @@ body {
 <ul>
 <li>TA for MOOC by <a style="text-decoration: none;" href="https://nptel.ac.in/">NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
 <li>Quantum Algorithms and Cryptography (Jul 2022 - Nov 2022)</li>
-<li>Data Structures and Algorithms (Jan 2022 - Apr 2022)</li>
+<li>Data Structures and Algorithms (Lead TA) (Jan 2022 - Apr 2022)</li>
 <li>Post-Quantum Cryptography(Feb 2021 - May 2021)</li>
 <li>Foundations of Cryptography (Jul 2019 - Nov 2019)</li>
 <li>Languages, Machines and Computation (Jan 2019 - May 2019)</li>
