--- a/awards.html
+++ b/awards.html
@@ -57,6 +57,9 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <ul style="font-size:14px;">
+<li><a href="https://www.cse.iitm.ac.in/awards_details.php?arg=NDE=">IBM Best PhD Thesis</a> Award.
+</li>
+<br>
 <li>Google India Travel Grant for presenting paper at CRYPTO 2023.
 </li>
 <br>
