--- a/pubs.html
+++ b/pubs.html
@@ -61,6 +61,11 @@ body {
 -->
 <h3 style="color:#444466;">Publications</h3>
 <ul>
+<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Strongly Secure Universal Thresholdizer</a>.
+  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i>To appear In the proceedings of Asiacrypt 2024</i>.</p>
+</li>
+</ul>
+<ul>
 <li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
   <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2023</i>.</p>
 </li>
