--- a/pubs.html
+++ b/pubs.html
@@ -62,16 +62,16 @@ body {
 <h3 style="color:#444466;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Strongly Secure Universal Thresholdizer</a>.
-  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i>To appear In the proceedings of Asiacrypt 2024</i>.</p>
+  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i>To appear in the proceedings of Asiacrypt 2024</i>.</p>
 </li>
 </ul>
 <ul>
-<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2023/941.pdf">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
   <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2023</i>.</p>
 </li>
 </ul>
   <ul>
-<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>In the proceedings of Crypto 2023</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2023/1191.pdf">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>In the proceedings of Crypto 2023</i>.</p>
 </li>
 </ul>
 <ul>
