--- a/activities.html
+++ b/activities.html
@@ -57,9 +57,13 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
-<tr><td> - Subreviewer for Eurocrypt 2024, Crypto 2022, 2023, CCS 2023, TCC 2023, PKC 2021, 2024, ACNS 2023, 2024 and IWSEC 2023.<br><br></td></tr><br>
-<tr><td> - Student Volunteer at TCC 2018.<br><br></td></tr>
-<tr><td> - Teaching Assistant at IIT Madras for different courses:
+<tr><td>Program committee member: Asiacrypt 2024</td></tr><br>
+<tr><td>  (Sub)reviewer for <br>
+  Conferences: Eurocrypt 2024, Crypto (2023, 2022), CCS 2023, TCC (2024, 2023), ICALP 2024, PKC (2024, 2021), ACNS (2024, 2023) and IWSEC 2023.<br><br>
+  Journals: IEEE/ACM Transactions on Networking<br>
+  Transactions on Information Forensics & Security<br><br></td></tr><br>
+  <tr><td>  Student Volunteer at TCC 2018.<br><br></td></tr>
+<tr><td>  Teaching Assistant at IIT Madras for different courses:
 <ul>
 <li>TA for MOOC by <a style="text-decoration: none;" href="https://nptel.ac.in/">NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
 <li>Quantum Algorithms and Cryptography (Jul 2022 - Nov 2022)</li>
