--- a/activities.html
+++ b/activities.html
@@ -57,8 +57,8 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
-<tr><td>Program committee member: Asiacrypt 2024</td></tr><br>
-<tr><td>  External reviewer for: Eurocrypt 2024, Crypto (2023, 2022), CCS 2023, TCC (2024, 2023), ICALP 2024, PKC (2024, 2021), ACNS (2024, 2023) and IWSEC 2023.<br><br></td></tr>
+<tr><td><b>Program committee member:</b> Asiacrypt 2024<br><br></td></tr><br>
+<tr><td>  Conferences external reviewer: Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023.<br><br></td></tr><br>
 <tr><td>Journals reviewer: <br>
 IEEE/ACM Transactions on Networking<br>
 Transactions on Information Forensics & Security<br><br></td></tr><br>
