--- a/activities.html
+++ b/activities.html
@@ -58,14 +58,14 @@ body {
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
 <tr><td><b>Program committee member:</b> Asiacrypt 2024<br><br></td></tr><br>
-<tr><td>  Conferences external reviewer: Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023.<br><br></td></tr><br>
-<tr><td>Journals reviewer: <br>
+<tr><td>  <b>Conferences external reviewer:</b> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023.<br><br></td></tr>
+<tr><td><b>Journals reviewer:</b> <br>
 IEEE/ACM Transactions on Networking<br>
 Transactions on Information Forensics & Security<br><br></td></tr><br>
-<tr><td>  Student Volunteer at TCC 2018.<br><br></td></tr>
-<tr><td>  Teaching Assistant at IIT Madras for different courses:
+<tr><td>  <b>Student Volunteer:</b> TCC 2018.<br><br></td></tr>
+<tr><td>  <b>Teaching Assistant at IIT Madras:</b>
 <ul>
-<li>TA for MOOC by <a style="text-decoration: none;" href="https://nptel.ac.in/">NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
+<li>MOOC by <a style="text-decoration: none;" href="https://nptel.ac.in/">NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
 <li>Quantum Algorithms and Cryptography (Jul 2022 - Nov 2022)</li>
 <li>Data Structures and Algorithms (Lead TA) (Jan 2022 - Apr 2022)</li>
 <li>Post-Quantum Cryptography(Feb 2021 - May 2021)</li>
