--- a/activities.html
+++ b/activities.html
@@ -60,8 +60,11 @@ body {
 <tr><td><b>Program committee member:</b> Asiacrypt 2024<br><br></td></tr><br>
 <tr><td>  <b>Conferences external reviewer:</b> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023.<br><br></td></tr>
 <tr><td><b>Journals reviewer:</b> <br>
-IEEE/ACM Transactions on Networking<br>
-Transactions on Information Forensics & Security<br><br></td></tr><br>
+  <ul>
+    <li>IEEE/ACM Transactions on Networking</li>
+    <li>Transactions on Information Forensics & Security</li>
+  </ul>
+<br><br></td></tr><br>
 <tr><td>  <b>Student Volunteer:</b> TCC 2018.<br><br></td></tr>
 <tr><td>  <b>Teaching Assistant at IIT Madras:</b>
 <ul>
