--- a/activities.html
+++ b/activities.html
@@ -57,7 +57,7 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
-<tr><td><b>Program committee member:</b> Asiacrypt 2024<br><br></td></tr><br>
+<tr><td><p style="color: rgb(135,206,235)">Program committee member:</p> Asiacrypt 2024<br><br></td></tr><br>
 <tr><td>  <b>Conferences external reviewer:</b> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023<br><br></td></tr>
 <tr><td><b>Journals reviewer:</b>
   <ul>
