--- a/activities.html
+++ b/activities.html
@@ -58,15 +58,15 @@ body {
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
 <tr><td><span style="color: rgb(100,0,170)">Program committee member:</span> Asiacrypt 2024<br><br></td></tr><br>
-<tr><td>  <b>Conferences external reviewer:</b> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023<br><br></td></tr>
-<tr><td><b>Journals reviewer:</b>
+<tr><td>  <span style="color: rgb(100,0,170)">Conferences external reviewer:</span> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023<br><br></td></tr>
+<tr><td><span style="color: rgb(100,0,170)">Journals reviewer:</span>
   <ul>
     <li>IEEE/ACM Transactions on Networking</li>
     <li>Transactions on Information Forensics & Security</li>
   </ul>
 </td></tr>
-<tr><td>  <b>Student Volunteer:</b> TCC 2018<br><br></td></tr>
-<tr><td>  <b>Teaching Assistant at IIT Madras:</b>
+<tr><td>  <span style="color: rgb(100,0,170)">Student Volunteer:</span> TCC 2018<br><br></td></tr>
+<tr><td>  <span style="color: rgb(100,0,170)">Teaching Assistant at IIT Madras:</span>
 <ul>
 <li>MOOC by <a style="text-decoration: none;" href="https://nptel.ac.in/">NPTEL</a> on Quantum Algorithms and Cryptography (Jan 2023 - Apr 2023)</li>
 <li>Quantum Algorithms and Cryptography (Jul 2022 - Nov 2022)</li>
