--- a/activities.html
+++ b/activities.html
@@ -58,7 +58,7 @@ body {
 <td valign="top"; style="width:850px; text-align:justify">
 <table style="font-size:14px">
 <tr><td><span style="color: rgb(100,0,170)">Program committee member:</span> Asiacrypt 2024<br><br></td></tr><br>
-<tr><td>  <span style="color: rgb(100,0,170)">Conferences external reviewer:</span> Eurocrypt 2024, Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2024,2021), ACNS (2025,2024,2023) and IWSEC 2023<br><br></td></tr>
+<tr><td>  <span style="color: rgb(100,0,170)">Conferences external reviewer:</span> Eurocrypt (2025,2024), Crypto (2023,2022), CCS 2023, TCC (2024,2023), ICALP 2024, PKC (2025,2024,2021), ACNS (2025,2024,2023) and IWSEC 2023<br><br></td></tr>
 <tr><td><span style="color: rgb(100,0,170)">Journals reviewer:</span>
   <ul>
     <li>IEEE/ACM Transactions on Networking</li>
