--- a/pubs.html
+++ b/pubs.html
@@ -61,13 +61,13 @@ body {
 -->
 <h3 style="color:#444466;">Publications</h3>
 <ul>
-<li><p style="font-size:14px;"><a href="https://yadav-anshu.github.io/pubs.html">Strongly Secure Universal Thresholdizer</a>.
-  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i>To appear in the proceedings of Asiacrypt 2024</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2024/2078.pdf">Strongly Secure Universal Thresholdizer</a>.
+  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i> Asiacrypt 2024 (To appear)</i>.</p>
 </li>
 </ul>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2023/941.pdf">Constant Input Attribute Based (and Predicate) Encryption from Evasive and Tensor LWE</a>.
-  <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2023</i>.</p>
+  <br> Shweta Agrawal, M&eacutelissa Rossi, Anshu Yadav, Shota Yamada.<br><i> Crypto 2023</i>.</p>
 </li>
 </ul>
   <ul>
@@ -76,20 +76,20 @@ body {
 </ul>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Trace and Revoke with Optimal Parameters
-from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Eurocrypt 2023</i>.</p>
+from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i> Eurocrypt 2023</i>.</p>
 </li>
 </ul>
 <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2021/1565.pdf">Practical, Round-Optimal Lattice-Based Blind Signatures</a>.<br> Shweta Agrawal, Elena Kirshanova, Damien Stehl&eacute, Anshu Yadav.<br><i>In the proceedings of ACM-CCS 2022</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2021/1565.pdf">Practical, Round-Optimal Lattice-Based Blind Signatures</a>.<br> Shweta Agrawal, Elena Kirshanova, Damien Stehl&eacute, Anshu Yadav.<br><i> ACM-CCS 2022</i>.</p>
 </li>
 </ul>
 <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1024.pdf">Multi-Input Attribute Based Encryption and Predicate Encryption</a>.<br> Shweta Agrawal, Anshu Yadav, Shota Yamada.<br><i>In the proceedings of Crypto 2022</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1024.pdf">Multi-Input Attribute Based Encryption and Predicate Encryption</a>.<br> Shweta Agrawal, Anshu Yadav, Shota Yamada.<br><i> Crypto 2022</i>.</p>
 </li>
 </ul>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/634.pdf">Round-Optimal Lattice-Based Threshold Signatures, Revisited</a>.<br> Shweta Agrawal, Damien Stehl&eacute, Anshu Yadav. <br>
-<i>In the proceedings of EATCS-ICALP 2022</i>.</p>
+<i> EATCS-ICALP 2022</i>.</p>
 </li>
 </ul>
 </td>
