--- a/pubs.html
+++ b/pubs.html
@@ -71,7 +71,7 @@ body {
 </li>
 </ul>
   <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2023/1191.pdf">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i>In the proceedings of Crypto 2023</i>.</p>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2023/1191.pdf">Attribute-Based Multi-Input FE (and more) for Attribute-Weighted Sums</a>.<br> Shweta Agrawal, Junichi Tomida, Anshu Yadav.<br><i> Crypto 2023</i>.</p>
 </li>
 </ul>
 <ul>
