--- a/pubs.html
+++ b/pubs.html
@@ -62,7 +62,7 @@ body {
 <h3 style="color:#444466;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2024/2078.pdf">Strongly Secure Universal Thresholdizer</a>.
-  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i> Asiacrypt 2024 (To appear)</i>.</p>
+  <br> Ehsan Ebrahimi, Anshu Yadav.<br><i> Asiacrypt 2024</i>.</p>
 </li>
 </ul>
 <ul>
