--- a/pubs.html
+++ b/pubs.html
@@ -56,9 +56,13 @@ body {
 <td style="width:100px">
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
-<!--
+
 <h3 style="color:#00BFFF;">Manuscripts</h3>
--->
+<ul>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Evasive LWE: Attacks, Variants \& Obfustopia.</a>.
+  <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br>.</p>
+</li>
+</ul>
 <h3 style="color:#444466;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2024/2078.pdf">Strongly Secure Universal Thresholdizer</a>.
