--- a/pubs.html
+++ b/pubs.html
@@ -57,7 +57,7 @@ body {
 </td>
 <td valign="top"; style="width:850px; text-align:justify">
 
-<h3 style="color:#00BFFF;">Manuscripts</h3>
+<h3 style="color:#444466;">Manuscripts</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Evasive LWE: Attacks, Variants \& Obfustopia.</a>.
   <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br>.</p>
