--- a/pubs.html
+++ b/pubs.html
@@ -59,7 +59,7 @@ body {
 
 <h3 style="color:#444466;">Manuscripts</h3>
 <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Evasive LWE: Attacks, Variants \& Obfustopia.</a>.
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Evasive LWE: Attacks, Variants & Obfustopia.</a>.
   <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br>.</p>
 </li>
 </ul>
