--- a/pubs.html
+++ b/pubs.html
@@ -79,7 +79,7 @@ body {
 </li>
 </ul>
 <ul>
-<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Trace and Revoke with Optimal Parameters
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2022/1347.pdf">Broadcast, Trace and Revoke with Optimal Parameters
 from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Shota Yamada.<br><i> Eurocrypt 2023</i>.</p>
 </li>
 </ul>
