--- a/pubs.html
+++ b/pubs.html
@@ -67,6 +67,11 @@ body {
 -->
 <h3 style="color:#444466;">Publications</h3>
 <ul>
+<li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Zeroizing Attacks against Evasive and Circular Evasive LWE</a>.
+  <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br><i> TCC 2025</i>.</p>
+</li>
+</ul>
+<ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2024/2078.pdf">Strongly Secure Universal Thresholdizer</a>.
   <br> Ehsan Ebrahimi, Anshu Yadav.<br><i> Asiacrypt 2024</i>.</p>
 </li>
@@ -103,4 +108,5 @@ from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Sh
 </table>
 </body>
 </div>
+
 
