--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ body {
 <!--
 <hr style="width:100%;text-align:left;margin-left:0">
 //-->
-<p style="font-size:14px;">I am currently a postdoctoral researcher at the <a href="https://ista.ac.at/en/home/">Institute of Science and Technology Austria</a>, working with Professor <a href="https://ist.ac.at/en/research/pietrzak-group/">Krzysztof Pietrzak</a>. I completed my Ph.D. from </a> at <a href="https://www.iitm.ac.in">IIT Madras</a> where I was very fortunate to be guided by Professor <a href="https://www.cse.iitm.ac.in/~shwetaag"> Shweta Agrawal</a>. My research interests are in the area of Theoretical Cryptography. In particular, I am interested in studying the constructions of advanced crypto primitives under various assumptions. </p>
+<p style="font-size:14px;">I am an Assistant Professor in the Computer Science and Engineering Department at IIT Kanpur. Before that I was a postdoctoral researcher at the <a href="https://ista.ac.at/en/home/">Institute of Science and Technology Austria</a>, working with Professor <a href="https://ist.ac.at/en/research/pietrzak-group/">Krzysztof Pietrzak</a>. I completed my Ph.D. from </a> at <a href="https://www.iitm.ac.in">IIT Madras</a> where I was very fortunate to be guided by Professor <a href="https://www.cse.iitm.ac.in/~shwetaag"> Shweta Agrawal</a>. My research interests are in the area of Theoretical Cryptography. In particular, I am interested in studying the constructions of advanced crypto primitives under various assumptions. </p>
  <br> <br>
- Email: <tt> {first name DOT last name 06} AT gmail.com </tt> <br>
+ Email: <tt> anshuy AT cse DOT iitk DOT ac DOT in </tt> <br>
 <br>
 	</div>
 </td>
@@ -76,3 +76,4 @@ body {
 </center>
 </div>
 </body>
+
