--- a/pubs.html
+++ b/pubs.html
@@ -68,7 +68,7 @@ body {
 <h3 style="color:#444466;">Publications</h3>
 <ul>
 <li><p style="font-size:14px;"><a href="https://eprint.iacr.org/2025/375.pdf">Zeroizing Attacks against Evasive and Circular Evasive LWE</a>.
-  <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br><i> TCC 2025 (To appear)</i>.</p>
+  <br> Shweta Agrawal, Anuja Modi, Anshu Yadav, Shota Yamada.<br><i> TCC 2025</i>.</p>
 </li>
 </ul>
 <ul>
@@ -108,6 +108,7 @@ from Polynomial Hardness</a>.<br> Shweta Agrawal, Simran Kumari, Anshu Yadav, Sh
 </table>
 </body>
 </div>
+
 
 
 
